fixes speaker registration button on mobile device

--- a/css/theme-lava.css
+++ b/css/theme-lava.css
@@ -921,7 +921,8 @@ nav .container {
 }
 @media all and (max-width: 767px) {
   .hero-slider .btn-hollow {
-    display: none;
+    display: inline-block;
+    margin: 5px auto auto auto;
   }
 }
 .register-header form.register {
